@@ -9,7 +9,6 @@ Build-Depends: debhelper (>= 9),
  python3-sphinx,
  libcm4all-thirdparty-apreq2-dev,
  libcm4all-core-dev (>= 1.20.5),
- libcm4all-inline-dev (>= 0.3.5),
  libcm4all-http-dev (>= 1.2.5)
 Build-Conflicts: libcm4all-was-dev
 Standards-Version: 3.9.1
