@@ -1,3 +1,4 @@
 usr/include/cm4all/libwas-1/was/simple.h
+usr/include/cm4all/libwas-1/was/compiler.h
 usr/lib/*/libcm4all-was-simple.so
 usr/lib/*/pkgconfig/libcm4all-was-simple.pc
